--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
 	.row{
 		margin-top: 20px;
 	}
+
+	@media screen and (max-width: 1200px) {
+		.img-fluid{
+			display: block;
+			margin-left: auto;
+			margin-right: auto;
+			width: 50%;
+		}
+	}
 </style>
 <body>
 
