--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
 			width: 50%;
 		}
 	}
+	@media screen and (max-width: 800px) {
+		.left-auto {
+
+			margin-top: 5px;
+			font-size: medium;
+		}
+	}
 </style>
 <body>
 
